--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+$couleur1: #00c853;
+$couleur2: #69f0ae;
 body {
     background-color: #eee;
     color: #555555;
@@ -8,11 +10,11 @@ body {
     padding: 50px 20px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, .1);
     margin-bottom: 50px;
-    border-top: 10px solid #69f0ae;
+    border-top: 10px solid $couleur2;
 }
 
 header {
-    background-color: #00c853;
+    background-color: $couleur1;
     color: white;
     padding: 50px 50px 150px 50px;
     margin-bottom: -100px;
@@ -27,6 +29,12 @@ footer {
     padding: 50px 0;
 }
 
-.form-control{
-    border-radius:0;
+.form-control {
+    border-radius: 0;
+}
+
+@media screen and (max-width: 991px) {
+    h1{
+        font-size: 40px;
+    }
 }
